finished basic functionality, need to add button and make it work for ALL teams

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
     "<all_urls>",
     "webRequest",
     "webRequestBlocking",
-    "storage"
+    "storage",
+    "clipboardRead",
+    "clipboardWrite"
   ],
 
   "background": {
