--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,9 @@
   "manifest_version": 2,
   "name": "webRequest-demo",
   "version": "1.0",
+  "icons": {
+      "48": "icons/bookmark-it.png"
+  },
 
   "permissions": [
     "<all_urls>",
@@ -10,8 +13,15 @@
     "webRequestBlocking",
     "storage",
     "clipboardRead",
-    "clipboardWrite"
+    "clipboardWrite",
+    "bookmarks",
+    "tabs"
   ],
+
+  "browser_action": {
+      "default_icon": "icons/bookmark-it.png",
+      "default_title": "fpl text"
+  },
 
   "background": {
     "scripts": ["fpltxt.js"]
